<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meal Maniac!</string>
    <string name="title_activity_meal_preview">Meal Preview</string>
    <string name="title_activity_review">Review Your Order</string>
    <string name="title_activity_order">Ordering</string>
    <string name="title_activity_launch_page">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="place_order">Placing an Order</string>

    <!-- Strings for the Login Screen -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>

    <!-- Strings for the Meal Preview Activity -->
    <string name="restaurant_name">Restaurant Name</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="price">Price</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="finalize_button">Order</string>

    <!-- Strings for Review Activity -->
    <string name="price_review">Price Review</string>
    <string name="item_review">Item Ordered Review</string>
    <string name="restaurant_review">Restaurant Review</string>
    <string name="number_review">Number Review</string>

    <!-- Strings for Fragments -->
    <string name="fragments_textview1">Test 1</string>
    <string name="fragments_textview2">Test 2</string>
    <string name="fragments_textview3">Test 3</string>
    <string name="title_activity_fragments">FragmentsActivity</string>
    <string name="number">Number!</string>
    <string name="restaurant_number">Number:  </string>
    <string name="title_activity_test_fragments">TestFragmentsActivity</string>
    <string name="title_activity_loading_page">LoadingPageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_client">ClientActivity</string>

</resources>
