<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/restaurant_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/restaurant_name"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/item_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_ordered"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/price_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="40sp" />

</LinearLayout>