<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReviewActivity" >

    <TextView
        android:id="@+id/price_review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_ordered_review_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/price_review"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/item_ordered_review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_name_review_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/item_review"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/restaurant_name_review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/restaurant_review"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/number_review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/number_review"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

</RelativeLayout>