<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/email_textarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" 
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_textarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" 
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:layout_margin="5dp"
        android:onClick="login"
        android:text="@string/login_button" 
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:layout_margin="5dp"
        android:onClick="signup"
        android:text="@string/signup_button" 
        android:layout_gravity="center"/>

</LinearLayout>
